# bobaclient

./: LICENSE  README.md  meson.build
include/: bobaclient.hpp  cli.hpp  curl.hpp  errors.hpp  json.hpp  libbobaclient.hpp  log.hpp  main.hpp  meson.build  types.hpp
include/bobaclient/: bobaclient.hpp  display.hpp  errors.hpp  types.hpp
lib/: meson.build
lib/include/: json.hpp  meson.build  types.hpp
lib/src/: bobaclient.cpp  meson.build
main/: meson.build
main/include/: curl.hpp  log.hpp
main/src/: log.cpp  main.cpp  meson.build
src/: bobaclient.cpp  cli.cpp  curl.cpp  errors.cpp  json.cpp  libbobaclient.cpp  log.cpp  main.cpp  meson.build  types.cpp
src/bobaclient/: bobaclient.cpp  errors.cpp  json.cpp  types.cpp
